--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "Node API Challenge",
     "main": "index.js",
     "scripts": {
-        "db:seed": "knex seed:run"
+        "server": "nodemon index.js",
+        "start": "node index.js"
     },
     "repository": {
         "type": "git",
@@ -20,8 +21,12 @@
     },
     "homepage": "https://github.com/LambdaSchool/node-api-challenge#readme",
     "dependencies": {
+        "cors": "^2.8.5",
+        "create-react-app": "^3.3.0",
+        "express": "^4.17.1",
         "helmet": "^3.21.2",
         "knex": "^0.20.8",
+        "nodemon": "^2.0.2",
         "sqlite3": "^4.1.1"
     },
     "devDependencies": {
