--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "homepage": "https://github.com/LambdaSchool/node-api-challenge#readme",
     "dependencies": {
+        "cor": "0.0.0",
         "cors": "^2.8.5",
         "create-react-app": "^3.3.0",
         "express": "^4.17.1",
